[gd_scene load_steps=18 format=2]

[ext_resource path="res://addons/angelica/Games/trucktown/car_select.gd" type="Script" id=1]
[ext_resource path="res://img/32/1f69a.png" type="Texture" id=2]
[ext_resource path="res://img/32/1f69c.png" type="Texture" id=3]
[ext_resource path="res://img/32/1f697.png" type="Texture" id=4]
[ext_resource path="res://img/32/1f3c6.png" type="Texture" id=5]
[ext_resource path="res://addons/angelica/Themes/SuperButton.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[node name="CarSelect" type="Node2D"]
script = ExtResource( 1 )

[node name="SuperButton" parent="." instance=ExtResource( 6 )]

[node name="MiniVan" type="Button" parent="."]
margin_left = 30.6742
margin_top = 11.3439
margin_right = 74.6742
margin_bottom = 49.3439
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/normal = SubResource( 1 )
icon = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Monstertruck" type="Button" parent="."]
margin_left = 187.152
margin_top = 12.3733
margin_right = 231.152
margin_bottom = 50.3733
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/normal = SubResource( 1 )
icon = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TrailerTruck" type="Button" parent="."]
margin_left = 68.1742
margin_top = 12.3439
margin_right = 112.174
margin_bottom = 50.3439
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
icon = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TowTruck" type="Button" parent="."]
margin_left = 111.675
margin_top = 10.1677
margin_right = 189.675
margin_bottom = 52.1677
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1f697" type="Sprite" parent="TowTruck"]
position = Vector2( 50, 20 )
texture = ExtResource( 4 )

[node name="SuperButton2" parent="." instance=ExtResource( 6 )]

[connection signal="pressed" from="MiniVan" to="." method="_on_MiniVan_pressed"]
[connection signal="pressed" from="Monstertruck" to="." method="_on_Monstertruck_pressed"]
[connection signal="pressed" from="TrailerTruck" to="." method="_on_TrailerTruck_pressed"]
[connection signal="pressed" from="TowTruck" to="." method="_on_TowTruck_pressed"]
